Работа c HTML элементами. Создание. Копирование.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</div>
 
         <!-- Создание элементов -->
-        <div class="dom-example none">
+        <div class="dom-example">
             <h2>Создание и копирование элементов</h2>
             <div id="elementsContainer"></div>
         </div>
